--- a/notebooks/try-mosaic-widget.ipynb
+++ b/notebooks/try-mosaic-widget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
     "import requests\n",
     "import ipywidgets\n",
     "\n",
-    "from mosaic_widget import MosaicWidget"
+    "from mosaic_widget import MosaicWidget\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4 2012-01-05            1.3       8.9       2.8   6.1     rain"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7af4ddd37b6f4153a5b8910fcce370d3",
+       "model_id": "abc4d231ae254ea4bade6fe4003d3d53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +158,7 @@
        "MosaicWidget(spec={'meta': {'title': 'Seattle Weather', 'description': 'An interactive view of Seattle’s weath…"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,8 +168,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`TODO: Note that as at Apr 2024, the Mosaic widget doesn't seem to render correctly in VS Code notebooks - see Colab demo instead:`\n",
+    "\n",
+    "https://uwdata.github.io/mosaic/jupyter/ "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +234,7 @@
        "   'width': 680}]}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
