Pre MacBook migration commit

--- a/notebooks/try-openparse.ipynb
+++ b/notebooks/try-openparse.ipynb
@@ -312,6 +312,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('<html>\\n'\n",
+      " '        <head> <meta charset=\"UTF-8\">\\n'\n",
+      " '        <style>\\n'\n",
+      " '        table, th, td {\\n'\n",
+      " '            border: 1px solid black;\\n'\n",
+      " '            font-size: 10px;\\n'\n",
+      " '        }\\n'\n",
+      " '        </style> </head>\\n'\n",
+      " '        <body>\\n'\n",
+      " '        <table frame=\"hsides\" rules=\"groups\" width=\"100%%\">\\n'\n",
+      " '            [html]<thead><tr><tdcolspan=\"5\">Table name : '\n",
+      " 'road_traffic_counts_vear1y_sumary</td></tr><tr><td>Variable '\n",
+      " 'Name</td><td>Data Type</td><td>Length</td><td>Value '\n",
+      " 'Definition</td><td>Domain '\n",
+      " 'Values</td></tr></thead><tbody><tr><td>STATION_KEY</td><td>Number</td><td></td><td>Unique '\n",
+      " 'Station Key</td><td>Refer '\n",
+      " '5.1</td></tr><tr><td>STATION_ID</td><td>String</td><td>50</td><td>The ID of '\n",
+      " 'the Traffic Counter '\n",
+      " 'Station</td><td></td></tr><tr><td>TRAFFIC_DIRECTION_SEQ</td><td>Number</td><td></td><td>0 '\n",
+      " ': COUNTER 1 : PRESCRIBED 2 : BOTH</td><td>Refer '\n",
+      " '5.2</td></tr><tr><td>TRAFFIC_DIRECTION_NAME</td><td>String</td><td>50</td><td>1 '\n",
+      " ': PRESCRIBED2 : BOTH —— 1 : '\n",
+      " 'NORTH</td><td></td></tr><tr><td>CARDINAL_DIRECTION_SEQ</td><td>Number</td><td></td><td>3 '\n",
+      " ': EAST5 : SOUTH7 : WEST9 : NORTHROUND AND SOUTHROUNO10 : EASTBOUND AND '\n",
+      " 'WESTBOUND</td><td>Refer '\n",
+      " '5.3</td></tr><tr><td>CARDINAL_DIRECTION_NAME</td><td>String</td><td>50</td><td>1 '\n",
+      " ': NGRTF63 : EAST5 : SOUTH7 : WESTH9 : NORTHBOUND AND '\n",
+      " 'SOUTHBOUNDUNDUNDUNDUNDUNDUSISISISISISISISISISISISISISISISISISISISISILISISIPIED</td><td></td></tr><tr><td>CLASSIFICATION_SEQ</td><td>Number</td><td></td><td>2 '\n",
+      " ': LIGHT VEHICLES3 : HEAVY VEHICLES - 9 : Masked classifier as '\n",
+      " 'counter</td><td>Refer '\n",
+      " '5.4</td></tr><tr><td>CLASSIFICATION_TYPE</td><td>String</td><td>14</td><td>1 '\n",
+      " ': ALL VEHIGLES2 : LIGHT VEHICLES3 : HEAVY VEHICLES - 9 : Masked classifier '\n",
+      " 'as counter</td><td>Refer '\n",
+      " '5.4</td></tr><tr><td>COUNT_TYPE</td><td>String</td><td>13</td><td>TRAFFIC '\n",
+      " 'COUNT</td><td></td></tr><tr><td>YEAR</td><td>Number</td><td></td><td>Year</td><td></td></tr><tr><td>PERIOD</td><td>String</td><td>15</td><td>ALL '\n",
+      " 'DAYS : 24 hoursAM PEAK : 6 - 10AMOFF PEAK : 10AM 3PMWEEKDAYS : Monday - '\n",
+      " 'FrideyWEEKENENENENENS : Selurdey - SundayPLIB_ICHOILIDAY : NSIN : '\n",
+      " 'Holday</td><td>Refer '\n",
+      " '5.6</td></tr><tr><td>PARTIAL_YEAR</td><td>Boolean</td><td></td><td>0 : Non '\n",
+      " 'Partial Year 1 : Partial '\n",
+      " 'Year</td><td></td></tr><tr><td>LATEST_DATE</td><td>Date</td><td></td><td>For '\n",
+      " 'incomplete years, this will show the latest date of the partial '\n",
+      " 'year</td><td></td></tr><tr><td>TRAFFIC_COUNT</td><td>Number</td><td></td><td>Average '\n",
+      " 'traffic count for the '\n",
+      " 'period</td><td></td></tr><tr><td>DATA_START_DATE</td><td>Date</td><td></td><td>The '\n",
+      " 'date when data started recording. This usually gapEes. to sample. '\n",
+      " 'goutters.</td><td></td></tr><tr><td>DATA_END_DATE</td><td>Date</td><td></td><td>The '\n",
+      " 'date when data finished recording. This usually applies to sample '\n",
+      " 'counters.</td><td></td></tr><tr><td>DATA_DURATION</td><td>Number</td><td></td><td>The '\n",
+      " 'number of day ’ s data was recorded. This usually applies to sample '\n",
+      " 'counters. '\n",
+      " 'Partners</td><td></td></tr><tr><td>DATA_AVAILABILITY</td><td>Number</td><td></td><td>Percentage '\n",
+      " 'of available data within the recorded duration for a single direction. - 1 : '\n",
+      " 'the total sum of traffic volume in both '\n",
+      " 'directions.</td><td></td></tr><tr><td>DATA_RELIABILITY</td><td>Number</td><td></td><td>Percentage '\n",
+      " 'of useful data of available data for a single direction. - 1 : the total sum '\n",
+      " 'of traffic volume in balb. '\n",
+      " 'diractions.</td><td></td></tr><tr><td>DATA_QUALITY_INDICATOR</td><td>Number</td><td></td><td>0. '\n",
+      " 'Data has passed quality checks to be included in the dataset1. Data did not '\n",
+      " 'pess quality checks and has not been included in the '\n",
+      " 'dataset.</td><td></td></tr></tbody>\\n'\n",
+      " '        </table> </body> </html>')\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(parsed_content.nodes[4].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -361,6 +440,78 @@
    ],
    "source": [
     "display(Markdown(md(parsed_content.nodes[4].text)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\\*\\*4.3. Road traffic volumes collection station reference table\\*\\*  \n",
+       "  \n",
+       "\n",
+       " \n",
+       " \n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       " [html]|quality rating.\n",
+       "|  |\n",
+       "| | Table name : road\\_traffic\\_counts\\_station | = | j. Variable Name | Data Type | Length |\n",
+       "| Value Definition | Domain Values |  | THE\\_GEOM |  |\n",
+       "| Geometry | WGS84 Point Geometry |  | STATION\\_KEY | Number |\n",
+       "| Unique Station Key | Refer 5.1 | STATION\\_ID | String |  |\n",
+       "| 51 | The ID of the traffic collection station | NAME | String |  |\n",
+       "| 71 | Name of the road otherwise specified | ROAD\\_NAME | String |  |\n",
+       "| 8000 | Road name | FULL\\_NAME | String |  |\n",
+       "| 152 | Road name, cardinal direction from the intersection, and nearest intersecting road | COMMON\\_ROAD\\_NAME | String |  |\n",
+       "| 100 | Common ( localised ) road name | SECONDARY\\_NAME | String |  |\n",
+       "| 79 | Cardinal direction from intersection and nearest intersecting road. | ROAD\\_NAME\\_BASE | String |  |\n",
+       "| 50 | Road name without street type | ROAD\\_NAME\\_TYPE | String |  |\n",
+       "| 20 | Street type | INTERSECTION | String |  |\n",
+       "| 70 | Nearest intersecting road |  | DISTANCE\\_TO\\_INTERSECTION |  |\n",
+       "| Number | Distance in metres to nearest intensecting road | ROAD\\_NUMBER | String |  |\n",
+       "| 7 | RMS classified road number | LINK\\_NUMBER | String |  |\n",
+       "| 4 | RMS classified road - link number | MAB\\_WAY\\_TYPE | String |  |\n",
+       "| 20 | MAB Road type : A, M, B | MAB\\_WAY\\_NUMBER | String |  |\n",
+       "| 10 | MAB number | MAB\\_IDENTIFIER | String |  |\n",
+       "| 5 | MAB Road type and number | ROAD\\_FUNCTIONAL\\_HIERARCHY | String |  |\n",
+       "| 100 | Local, Primary, Arterial, Motorway, Dedicated Bus way, Urban service lane, Sub - Arterial Road, Distributor Road | R0A0\\_ON\\_TYPE | String |  |\n",
+       "| 50 | On Culvert, On Dam Wall, On Bridge, In Tunnel | LANE\\_COUNT | String |  |\n",
+       "| 100 | Number of lanes of road including Unknown Lanes, One Lane, and Two or More Lanes Type of road classification ( e. g. | ROAD\\_CLASSIFICATION\\_TYPE | String |  |\n",
+       "| 100 | Freeway, Street, Deviation, Highway, Road | Refer 5.7 | ROAD\\_CLASSIFICATION\\_ADMIN | String |\n",
+       "| 100 | Administration of road classification : Regional\\_lucal and State | RMS\\_REGION | String |  |\n",
+       "| 20 | Hunter, Western, Southern, ACT, Northern, South West and Sydney | LGA | String |  |\n",
+       "| 40 | Local Government Area | SUBURB | String |  |\n",
+       "| 40 | NSW suburb | POST\\_CODE | String |  |\n",
+       "| 12 | Postcode | DEVICE\\_TYPE | String |  |\n",
+       "| 100 | Recording device type | Refer 5.8 | HEAVY\\_VEHICLE\\_CHECKING\\_STATION | Boolean |\n",
+       "| 0 : Non Heavy Vehicle Checking Station | PERMANENT\\_STATION |  | Boolean |  |\n",
+       "| 1... tfexy\\_Veftsite. St289009. tra. Stifflisti. 0 : Non - Permanent Station1 : Permanent Station | VEHICLE\\_CLASSIFIER |  | Boolean |  |\n",
+       "| 0 : Non Vehicle Classifier 1 : Vehicle Classifier | LAMBERT\\_EASTING |  | Number |  |\n",
+       "| NSW Lambert Coordinates System | LAMBERT\\_NORTHING |  | Number |  |\n",
+       "| NSW Lambert Coordinates System | WGS84\\_LATITUDE |  | Number |  |\n",
+       "| WGS84 Coordinate System | WGS84\\_LONGITUDE |  | Number |  |\n",
+       "| WGS84 Coordinate System | DIRECTION\\_SEQ |  | Number |  |\n",
+       "| Unknown - sensor - sensor - sensitivity - sensitivity - sensitivity - sensitivity - sensitivity - sensitivity - sensitivity - sensitivity - sensitivity - sensitivities ------ | Refer 5.3 |  | QUALITY\\_RATING | Number |\n",
+       "| directions has been excluded for quality reasons5 : No data has been excluded due to guality. |  |  |\n",
+       "\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Markdown(md(parsed_content.nodes[5].text)))"
    ]
   },
   {
